--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,16 @@ body {
   cursor: pointer;
 }
 
+.u-fullHeight {
+  height: 100vh;
+  max-height: 100vh;
+}
+
+.u-scrollable {
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
 /*Future Work: comprehensive color & border utility classes*/
 
 .u-bgBlue {
