--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@ body {
   -webkit-overflow-scrolling: touch;
 }
 
+.u-smallText {
+  font-size: 0.9em;
+}
+
 /*Future Work: comprehensive color & border utility classes*/
 
 .u-bgBlue {
